--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-aniso8601==1.1.0
-beautifulsoup4==4.4.1
+aniso8601==1.2.0
+beautifulsoup4==4.5.1
 bs4==0.0.1
 click==6.6
+configparser==3.5.0
+enum34==1.1.6
+flake8==3.2.1
 Flask==0.11.1
-Flask-Cors==2.1.2
+Flask-Cors==3.0.2
 flask-restplus==0.9.2
 functools32==3.2.3.post2
 gunicorn==19.6.0
@@ -11,10 +14,13 @@ itsdangerous==0.24
 Jinja2==2.8
 jsonschema==2.5.1
 MarkupSafe==0.23
-pymongo==3.2.2
-python-dateutil==2.5.3
-pytz==2016.4
-requests==2.10.0
-schedule==0.3.2
+mccabe==0.5.2
+pycodestyle==2.2.0
+pyflakes==1.3.0
+pymongo==3.4.0
+python-dateutil==2.6.0
+pytz==2016.10
+requests==2.12.3
+schedule==0.4.2
 six==1.10.0
-Werkzeug==0.11.10
+Werkzeug==0.11.11
